Revision history for Perl extension Wx.

0.89

0.88  Sun Nov  9 18:03:25 CET 2008
	- Skip author tests unless $ENV{AUTHOR_TESTS} is set.

0.87  Fri Nov  7 20:31:09 CET 2008
	- Fix segmentation fault when building under Mac in ANSI mode.

0.86  Wed Sep  3 22:57:17 CEST 2008
	- Allow binding a method to an event, not just a sub reference.
	- Add Wx::SetAlwaysUTF8() to always return character strings from
	  wxWidgets methods, even in ANSI mode (does nothing if wxWidgets
	  is compiled with Unicode enabled).
	- Warn if INC/LIB are passed to Makefile.PL, since this might
	  cause the build to fail.

0.85  Sun Aug 24 11:26:38 CEST 2008
	- Compilation fixes for wxMotif (patch by Marek Rouchal).
	- On Mac OS X warn the user if it is not running the program
	  using wxPerl.

0.84  Sun Jun 29 21:43:31 CEST 2008
	- Workaround for crash on exit on DEBUGGING Perls
	  (mostly affects Fedora users)

0.83  Mon May 19 22:37:36 CEST 2008
	- Avoid 'deep recursion' errors and eating all available
	  memory when loading wxPerl fails.
	- Handle INSTALL_BASE under Mac OS X.

0.82  Thu Mar 27 00:45:59 CET 2008
	- Fixed running Makefile.PL in absence of Alien::wxWidgets.
	- Renamed wx_xspp.pl and wx_overload.pl to
	  wxperl_xspp and wxperl_overload, to comply
	  with Debian policy.

0.81  Sat Jan 19 17:36:33 CET 2008
	- Almost completed the interface of wxStyledTextCtrl.
	- Added wxBitmapToggleButton and wxSVGFileDC (2.9).
	- Added wxWrapSizer (2.9).
	- Added wxNotificationMessage (2.9).
	- Added wxMirrorDC and wxDCClipper.
	- Partially completed interface to wxDataViewCtrl (2.9).

0.80  Tue Nov  6 23:12:53 CET 2007
	- Build fixes for Windows (both dmake and nmake).
	- Prototype implementation of wxVariant and wxDataViewCtrl (2.9).

0.79  Thu Oct 18 00:52:35 CEST 2007
	- Windows compilation fixes (thanks to John Kizlyk for the report).
	- Try to handle gracefully the absence of Alien::wxWidgets under
	  Mac OS X.
	- Added Alien::wxWidgets to configure_requires.
