@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     11/11/2006
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2006-2007 Mattia Barbon
+## Copyright:   (c) 2006-2008 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -17,8 +17,17 @@
 %name{Wx::AuiPaneInfo} class wxAuiPaneInfo
 {
     wxAuiPaneInfo();
+
+%{
+static void
+wxAuiPaneInfo::CLONE()
+  CODE:
+    wxPli_thread_sv_clone( aTHX_ CLASS, (wxPliCloneSV)wxPli_detach_object );
+%}
+
     ~wxAuiPaneInfo()
-        %code%{  if( wxPli_object_is_deleteable( aTHX_ ST(0) ) )
+        %code%{  wxPli_thread_sv_unregister( aTHX_ "Wx::AuiPaneInfo", THIS, ST(0) );
+                 if( wxPli_object_is_deleteable( aTHX_ ST(0) ) )
                      delete THIS;
                %};
 
