@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.89
+	- Fix thread crash caused by AUI.
 
 0.88  Sun Nov  9 18:03:25 CET 2008
 	- Skip author tests unless $ENV{AUTHOR_TESTS} is set.
